2025-06-19  Zhengyi Fu  <i@fuzy.me>

	Update gptel configuration

	* site-lisp/gptel-config.el (my-gptel--edit_file): Use `when-let*'
	to avoid warnings.
	(my-gptel--edit_file): Save the buffer after user accepts the change.
	(gptel-backend):  Do not set it here.
	(+gptel-auto-scroll-safe): New function.  Added to
	`gptel-post-stream-hook'.
	* site-lisp/gptel-config.el: Add new tools: get_pullreq,
	approve_pullreq, request_changes, get_jira_issue,
	create_jira_issue, comment_jira_issue, transition_jira_issue,
	search_jira_issue.


2025-06-19  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el: Confirm before reading files.

2025-06-19  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el: Add backend GH Copilot.

2025-06-19  Zhengyi Fu  <i@fuzy.me>

	Update gptel configuration

	* site-lisp/gptel-config.el: New file.

2025-06-18  Zhengyi Fu  <i@fuzy.me>

	Provide completion when reading elfeed tags

	* init.el (+elfeed-tag-history): New variable.
	(elfeed-show-tag): Add an advice to use `completing-read-multiple'
	to read the tags.

2025-06-18  Zhengyi Fu  <i@fuzy.me>

	* init.el (+elfeed-db-sync): Optimise the bash command.

2025-06-18  Zhengyi Fu  <i@fuzy.me>

	Optimize elfeed db sync

	* init.el (+elfeed-db-sync): Add --no-block option.  Send
	notification on finish.
	(elfeed-db-unload-hook): Add `elfeed-db-gc-safe'.

2025-06-18  Zhengyi Fu  <i@fuzy.me>

	* init.el (+elfeed-db-sync): Remove "--pipe" option.

2025-06-18  Zhengyi Fu  <i@fuzy.me>

	* init.el (+elfeed-db-sync): Rename the log buffer to
	" *+elfeed-db-sync*".

2025-06-18  Zhengyi Fu  <i@fuzy.me>

	Configure synchronization for elfeed

	* init.el: Load feeds.eld from `elfeed-db-directory'.
	(+elfeed-feeds-inhibit-save): New variable.
	(+elfeed-feeds-save): New function.  Called when `elfeed-feeds'	is changed.
	(+elfeed-db-sync): New function.  Synchronize the git repo for
	elfeed database. Called after `elfeed-db-gc'.

2025-06-18  Zhengyi Fu  <i@fuzy.me>
